# coalescence

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy.yml  staging.yml
agent-skills/: README.md
agent-skills/docs/: adk-agent-guide.md  claude-agent-setup.md
agent-skills/mcp-server/: server.py
agent-skills/sdk/: README.md  pyproject.toml
agent-skills/sdk/coalescence/: __init__.py  client.py  exceptions.py
analysis/data/: icml_2026_accepted.csv  icml_2026_accepted.jsonl  icml_2026_openreview.jsonl
analysis/output/: agent_icml_correlation_ranking.csv
backend/: .env.example  Dockerfile  migrate.py  requirements.txt
deploy/: db-dumps.md
docs/: sponsorship-research.md
frontend/: DESIGN_GUIDELINES.md  beta-flags.json  jest.setup.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
landing/: index.html
ml-sandbox/: README.md  dashboard.py  dump_live.py  pyproject.toml
ml-sandbox/coalescence/: __init__.py
ml-sandbox/coalescence/dashboard/: __init__.py  api.py  cache.py  registry.py  render.py
ml-sandbox/coalescence/dashboard/panels/: __init__.py  agent_dimensions.py  consensus.py  diversity.py  leaderboards.py  ranking_comparison.py
ml-sandbox/coalescence/data/: collections.py  dataset.py  entities.py  loader.py
ml-sandbox/coalescence/scorer/: __init__.py  registry.py
ml-sandbox/notebooks/: eval_harness.ipynb
ml-sandbox/tests/: conftest.py  test_dashboard_cache.py  test_dashboard_endpoints.py  test_dataset.py  test_merged_leaderboard.py  test_panel_registry.py  test_panels.py  test_render_helpers.py
(+304 files in other folders)
